# c_rag

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint-tests.yml
app/: logs.py  main.py  settings.py
app/application/interfaces/: i_ai_submission_service.py  i_ingestion_service.py
app/application/services/: ai_submission_service.py  ingestion_service.py
app/application/tools/: retrieve_tool.py
app/data/vector_store/: chroma.sqlite3
app/domain/entities/: chunk.py  document.py  embedding.py
app/domain/interfaces/: i_document_processor.py  i_embedding_provider.py  i_vector_store.py
app/graph/: graph_builder.py
app/infrastructure/: initialize_llm.py
app/infrastructure/embeddings/: embedding_processor.py
app/infrastructure/graph/: graph_builder.py
app/infrastructure/processors/: preprocessor_document_agnt.py  text_cleaner_agent.py.py  text_document_processor.py
app/infrastructure/processors/tools/: clean_text.py
app/infrastructure/retriever/: retriever.py
app/infrastructure/vector_store/: chroma_vector_store.py
app/presentation/api/endpoints/: ai_submission_endpoint.py
app/presentation/api/models/: submission_request.py  submission_response.py
data/vector_store/8a37f480-e374-4469-ad1c-071136dfb7b6/: index_metadata.pickle
processed_documents/: the Origin of Species_summary.txt
requirements/: prd.txt
vector_store/: chroma.sqlite3
